fixed contact overflow issues with mobile

--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -1,5 +1,5 @@
 #contacts {
-    margin: 50px;
+    margin: 50px 0;
     overflow: hidden;
     .contactInfo {
         display: flex;
