--- a/styles/scss/_preloader.scss
+++ b/styles/scss/_preloader.scss
@@ -10,7 +10,7 @@
     color: $primary;
     font-size: 6rem;
     animation: logo 1s ease infinite alternate;
-    transition: opacity 0.5s ease;
+    transition: opacity 1s ease;
 }
 
 .preloaderFinish {
